--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
-    <p> Bem-Vindo de volta! </p>
+    <p> Bem-vindo de volta! </p>
 
     <h1> LOG IN </h1>
 
@@ -15,7 +15,7 @@
     <input placeholder="Senha"/>
     <button> Login </button>
 
-    <a> Ainda não possui conta ? SING UP </a>
+    <a> Ainda não possui conta ? Cadastre-se aqui. </a>
 
 
 
